@@ -1,5 +1,6 @@
 2014-01-12  Kirit Saelensminde  <kirit@felspar.com>
  If clang is on the path for Linux then use that in preference to gcc
+ Extend the `fostlib::timestamp` interface somewhat.
 
 2013-08-20  Kirit Saelensminde  <kirit@felspar.com>
  Added `fostlib::log::flush()` which blocks until the previous logged messages have been processed.
